--- a/Updater/App.config
+++ b/Updater/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <appSettings>
+    <add key="updaterPath" value="https://web.gin.g-node.org/G-Node/gin-ui-installers/raw/master/Setup.msi" />
+  </appSettings>
+  
 </configuration>
