--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,15 @@ build_script:
 artifacts:
     - path: 'Setup\Release\*'
       name: Setup
+      
+dotnet_csproj:
+  patch: true
+  file: '**\*.csproj'
+  version: '{version}'
+  package_version: '{version}'
+  assembly_version: '{version}'
+  file_version: '{version}'
+  informational_version: '{version}'
 
 on_finish:
     - ps: |
