--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,14 +13,11 @@ artifacts:
     - path: 'Setup\Release\*'
       name: Setup
       
-dotnet_csproj:
+assembly_info:
   patch: true
-  file: '**\*.csproj'
-  version: '{version}'
-  package_version: '{version}'
+  file: AssemblyInfo.cs
   assembly_version: '{version}'
-  file_version: '{version}'
-  informational_version: '{version}'
+  assembly_file_version: '{version}'
 
 on_finish:
     - ps: |
