--- a/GinClientLibrary/GinClientLibrary.csproj
+++ b/GinClientLibrary/GinClientLibrary.csproj
@@ -65,6 +65,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Custom_Controls\FileHistoryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Custom_Controls\FileHistoryForm.Designer.cs">
+      <DependentUpon>FileHistoryForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Custom_Controls\MetroFileHistory.cs" />
+    <Compile Include="Custom_Controls\MetroFileHistory.Designer.cs">
+      <DependentUpon>MetroFileHistory.cs</DependentUpon>
+    </Compile>
     <Compile Include="DokanInterface.cs" />
     <Compile Include="Extensions\DirectoryInfoExtension.cs" />
     <Compile Include="GinRepository.cs" />
@@ -77,6 +87,14 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="TempKey.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Custom_Controls\FileHistoryForm.resx">
+      <DependentUpon>FileHistoryForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Custom_Controls\MetroFileHistory.resx">
+      <DependentUpon>MetroFileHistory.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
