--- a/GinClientApp/GinClientApp.csproj
+++ b/GinClientApp/GinClientApp.csproj
@@ -105,6 +105,12 @@
     <Compile Include="Dialogs\DeleteDataDlg.Designer.cs">
       <DependentUpon>DeleteDataDlg.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\ServerEditDlg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\ServerEditDlg.Designer.cs">
+      <DependentUpon>ServerEditDlg.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\ServerAddDlg.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +162,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\DeleteDataDlg.resx">
       <DependentUpon>DeleteDataDlg.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\ServerEditDlg.resx">
+      <DependentUpon>ServerEditDlg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\ServerAddDlg.resx">
       <DependentUpon>ServerAddDlg.cs</DependentUpon>
