--- a/GinClientApp/GinClientApp.csproj
+++ b/GinClientApp/GinClientApp.csproj
@@ -62,6 +62,9 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ionic.Zip.Reduced, Version=1.9.1.8, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c, processorArchitecture=MSIL">
+      <HintPath>..\packages\DotNetZip.Reduced.1.9.1.8\lib\net20\Ionic.Zip.Reduced.dll</HintPath>
+    </Reference>
     <Reference Include="MetroFramework, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
       <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.dll</HintPath>
     </Reference>
@@ -104,6 +107,12 @@
     </Compile>
     <Compile Include="Dialogs\DeleteDataDlg.Designer.cs">
       <DependentUpon>DeleteDataDlg.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Dialogs\GinCliDownloadDlg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\GinCliDownloadDlg.Designer.cs">
+      <DependentUpon>GinCliDownloadDlg.cs</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\HelpForm.cs">
       <SubType>Form</SubType>
@@ -168,6 +177,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\DeleteDataDlg.resx">
       <DependentUpon>DeleteDataDlg.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\GinCliDownloadDlg.resx">
+      <DependentUpon>GinCliDownloadDlg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\HelpForm.resx">
       <DependentUpon>HelpForm.cs</DependentUpon>
